crates/ide/src/snapshots/ide__inlay_hint__tests__inlay_hint_fixtures@ambiguous_named_ansi_port_has_no_hint.sv.snap
---
source: crates/ide/src/inlay_hint.rs
expression: hint_snapshot(hints)
input_file: crates/ide/src/inlay_hint/fixtures/ambiguous_named_ansi_port_has_no_hint.sv
---
<none>
