crates/ide/src/snapshots/ide__inlay_hint__tests__inlay_hint_fixtures@comment_only_range_skips_module_end_hint.sv.snap
---
source: crates/ide/src/inlay_hint.rs
expression: hint_snapshot(hints)
input_file: crates/ide/src/inlay_hint/fixtures/comment_only_range_skips_module_end_hint.sv
---
<none>
