crates/ide/src/snapshots/ide__inlay_hint__tests__inlay_hint_fixtures@explicit_non_ansi_port_label_uses_internal_ref_for_direction.sv.snap
---
source: crates/ide/src/inlay_hint.rs
expression: hint_snapshot(hints)
input_file: crates/ide/src/inlay_hint/fixtures/explicit_non_ansi_port_label_uses_internal_ref_for_direction.sv
---
Port @ 83 "→" padding=(true, true) target=Some((13, 22)) edit=None
