crates/ide/src/snapshots/ide__inlay_hint__tests__inlay_hint_fixtures@extra_ordered_connections_do_not_invent_ansi_port_hints.sv.snap
---
source: crates/ide/src/inlay_hint.rs
expression: hint_snapshot(hints)
input_file: crates/ide/src/inlay_hint/fixtures/extra_ordered_connections_do_not_invent_ansi_port_hints.sv
---
Port @ 53 "a ←" padding=(false, true) target=Some((19, 20)) edit=Some("TextEdit { changes: [TextEditItem { ins: \".a(\", del: 53..53 }, TextEditItem { ins: \")\", del: 57..57 }] }")
