crates/ide/src/snapshots/ide__inlay_hint__tests__inlay_hint_fixtures@implicit_named_port_hint_appears_before_local_name.sv.snap
---
source: crates/ide/src/inlay_hint.rs
expression: hint_snapshot(hints)
input_file: crates/ide/src/inlay_hint/fixtures/implicit_named_port_hint_appears_before_local_name.sv
---
Port @ 71 "←" padding=(true, true) target=Some((19, 24)) edit=None
