crates/ide/src/snapshots/ide__inlay_hint__tests__inlay_hint_fixtures@module_end_range_returns_end_structure_hint.sv.snap
---
source: crates/ide/src/inlay_hint.rs
expression: hint_snapshot(hints)
input_file: crates/ide/src/inlay_hint/fixtures/module_end_range_returns_end_structure_hint.sv
---
EndStructure @ 21 ": top" padding=(true, false) target=None edit=None
