crates/ide/src/snapshots/ide__inlay_hint__tests__inlay_hint_fixtures@named_port_hint_omits_visible_name_but_keeps_direction.sv.snap
---
source: crates/ide/src/inlay_hint.rs
expression: hint_snapshot(hints)
input_file: crates/ide/src/inlay_hint/fixtures/named_port_hint_omits_visible_name_but_keeps_direction.sv
---
Port @ 99 "→" padding=(true, true) target=Some((20, 32)) edit=None
