crates/ide/src/snapshots/ide__inlay_hint__tests__inlay_hint_fixtures@named_port_hints_resolve_ports_by_name_not_position.sv.snap
---
source: crates/ide/src/inlay_hint.rs
expression: hint_snapshot(hints)
input_file: crates/ide/src/inlay_hint/fixtures/named_port_hints_resolve_ports_by_name_not_position.sv
---
Port @ 99 "→" padding=(true, true) target=Some((29, 30)) edit=None
Port @ 112 "←" padding=(true, true) target=Some((38, 39)) edit=None
